# gw2-pf

./: CMakeLists.txt
include/pf/: chunk.hpp  config.hpp  magic.hpp  packfile.hpp  reader.hpp  types.hpp
include/pf/de/: deserializer.hpp  error.hpp
include/pf/formats/: abix.hpp  abnk.hpp  acct.hpp  amat.hpp  amsp.hpp  anic.hpp  armf.hpp  asnd.hpp  cdhs.hpp  char.hpp  cinp.hpp  cmac.hpp  cmpc.hpp  cntc.hpp  emoc.hpp  eula.hpp  hvkc.hpp  locl.hpp  mapc.hpp  mmet.hpp  modl.hpp  mpsd.hpp  pimg.hpp  prlt.hpp  txtm.hpp  txtv.hpp  txtv_.hpp
include/pf/formats/abix/: bidx.hpp
include/pf/formats/abix/bidx/: bidx_v0.hpp
include/pf/formats/abnk/: bkck.hpp
include/pf/formats/abnk/bkck/: bkck_v0.hpp  bkck_v1.hpp  bkck_v2.hpp
include/pf/formats/acct/: chat.hpp  comm.hpp  core.hpp  dlog.hpp  gusu.hpp  inpt.hpp  noti.hpp  pex.hpp  plrs.hpp  sqwd.hpp  umap.hpp  uxac.hpp
include/pf/formats/acct/chat/: chat_v0.hpp  chat_v1.hpp  chat_v2.hpp  chat_v3.hpp  chat_v4.hpp  chat_v5.hpp  chat_v6.hpp
include/pf/formats/acct/comm/: comm_v0.hpp
include/pf/formats/acct/core/: core_v0.hpp
include/pf/formats/acct/dlog/: dlog_v0.hpp
include/pf/formats/acct/gusu/: gusu_v0.hpp  gusu_v1.hpp
include/pf/formats/acct/inpt/: inpt_v0.hpp  inpt_v1.hpp
include/pf/formats/acct/noti/: noti_v0.hpp
include/pf/formats/acct/pex/: pex_v0.hpp
include/pf/formats/acct/plrs/: plrs_v0.hpp  plrs_v1.hpp  plrs_v2.hpp  plrs_v3.hpp
include/pf/formats/acct/sqwd/: sqwd_v0.hpp
include/pf/formats/acct/umap/: umap_v0.hpp
include/pf/formats/acct/uxac/: uxac_v0.hpp  uxac_v1.hpp  uxac_v10.hpp  uxac_v11.hpp  uxac_v12.hpp  uxac_v13.hpp  uxac_v14.hpp  uxac_v15.hpp  uxac_v16.hpp  uxac_v17.hpp  uxac_v18.hpp  uxac_v19.hpp  uxac_v2.hpp  uxac_v20.hpp  uxac_v21.hpp  uxac_v22.hpp  uxac_v23.hpp  uxac_v3.hpp  uxac_v4.hpp  uxac_v5.hpp  uxac_v6.hpp  uxac_v7.hpp  uxac_v8.hpp  uxac_v9.hpp
include/pf/formats/amat/: bgfx.hpp  dx9s.hpp  grmt.hpp  tool.hpp
include/pf/formats/amat/bgfx/: bgfx_v0.hpp  bgfx_v1.hpp
include/pf/formats/amat/dx9s/: dx9s_v0.hpp  dx9s_v1.hpp  dx9s_v10.hpp  dx9s_v11.hpp  dx9s_v2.hpp  dx9s_v3.hpp  dx9s_v4.hpp  dx9s_v5.hpp  dx9s_v6.hpp  dx9s_v7.hpp  dx9s_v8.hpp  dx9s_v9.hpp
include/pf/formats/amat/grmt/: grmt_v0.hpp  grmt_v1.hpp  grmt_v2.hpp  grmt_v3.hpp  grmt_v4.hpp  grmt_v5.hpp  grmt_v6.hpp
include/pf/formats/amat/tool/: tool_v0.hpp  tool_v1.hpp  tool_v2.hpp  tool_v3.hpp
include/pf/formats/amsp/: amsp.hpp
include/pf/formats/amsp/amsp/: amsp_v0.hpp  amsp_v1.hpp  amsp_v10.hpp  amsp_v11.hpp  amsp_v12.hpp  amsp_v13.hpp  amsp_v14.hpp  amsp_v15.hpp  amsp_v16.hpp  amsp_v17.hpp  amsp_v18.hpp  amsp_v19.hpp  amsp_v2.hpp  amsp_v20.hpp  amsp_v21.hpp  amsp_v22.hpp  amsp_v23.hpp  (+16 more)
include/pf/formats/anic/: cnfg.hpp  fall.hpp  mach.hpp  seqn.hpp
include/pf/formats/armf/: armf.hpp  mfst.hpp
include/pf/formats/asnd/: asnd.hpp
include/pf/formats/cdhs/: cdhs.hpp
include/pf/formats/char/: core.hpp  uxch.hpp
include/pf/formats/cinp/: cscn.hpp
include/pf/formats/cmac/: main.hpp
include/pf/formats/cmpc/: comp.hpp
include/pf/formats/cntc/: main.hpp
include/pf/formats/emoc/: anim.hpp
include/pf/formats/eula/: eula.hpp
include/pf/formats/hvkc/: havk.hpp
include/pf/formats/locl/: audo.hpp  core.hpp  grfx.hpp  pvpl.hpp  uxlc.hpp
include/pf/formats/mapc/: area.hpp  audi.hpp  bloc.hpp  cg15.hpp  cube.hpp  dcal.hpp  edit.hpp  env.hpp  exp.hpp  havk.hpp  laye.hpp  lght.hpp  msn.hpp  nm15.hpp  nmex.hpp  obs.hpp  occ.hpp  octm.hpp  parm.hpp  phys.hpp  pnvm.hpp  prp2.hpp  reso.hpp  rive.hpp  shad.hpp  shex.hpp  shor.hpp  snd.hpp  surf.hpp  tlfs.hpp  trn.hpp  trni.hpp  watr.hpp  zon2.hpp
include/pf/formats/mmet/: main.hpp
include/pf/formats/modl/: anim.hpp  coll.hpp  expa.hpp  game.hpp  geom.hpp  gr2s.hpp  icon.hpp  modl.hpp  prps.hpp  root.hpp  skel.hpp  tool.hpp
include/pf/formats/mpsd/: shad.hpp
include/pf/formats/pimg/: data.hpp  pgtb.hpp
include/pf/formats/prlt/: mfst.hpp
include/pf/formats/txtm/: txtm.hpp
include/pf/formats/txtv/: txtv.hpp
include/pf/formats/txtv_/: vari.hpp
(+493 files in other folders)
